# mlnx-switchdev-mode

./: .gitignore  .stestr.conf  .travis.yml  README.md  setup.cfg  test-requirements.txt  tox.ini
mlnx_switchdev_mode/: sriovify.py
mlnx_switchdev_mode/tests/unit/: sys-bus-pci.txt  test_sriovify.py
tools/: mlnx-bind-vfs.service  mlnx-switchdev-mode.service
tools/default/: mlnx-switchdev-mode
