[metadata]
name = mlnx-switchdev-mode
summary = Utility to switch Mellanox ConnectX network cards into switchdev mode
description-file =
    README.md
author = OpenStack Charmers Team, William Grant
author-email = william.grant@canonical.com
home-page = http://github.com/openstack-charmers/mlnx-switchdev-mode
classifier =
    Environment :: Linux
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    mlnx_switchdev_mode
data_files =
    lib/systemd/system =
    tools/mlnx-switchdev-mode.service

[entry_points]
console_scripts =
    mlnx-switchdev-mode = mlnx_switchdev_mode.sriovify:main
